fix: mainGoal 생성 api 로직 수정